--- a/chat-client/www/index.html
+++ b/chat-client/www/index.html
@@ -24,6 +24,8 @@
   <script src="js/services/app.js"></script>
   <script src="js/services/config-provider/config-provider.js"></script>
   <script src="js/services/user-service/user-service.js"></script>
+  <script src="js/controllers/app.js"></script>
+  <script src="js/controllers/chats-controller/chats-controller.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
 </head>
