--- a/chat-client/www/index.html
+++ b/chat-client/www/index.html
@@ -14,6 +14,8 @@
 
   <!-- ionic/angularjs js -->
   <script src="lib/ionic/js/ionic.bundle.js"></script>
+  <!-- lodash -->
+  <script src="lib/lodash/lodash.min.js"></script>
   <!-- socket.io lib-->
   <script src="lib/socket/socket.io-1.3.5.js"></script>
 
@@ -26,6 +28,7 @@
   <script src="js/services/user-service/user-service.js"></script>
   <script src="js/controllers/app.js"></script>
   <script src="js/controllers/chats-controller/chats-controller.js"></script>
+  <script src="js/controllers/chat-controller/chat-controller.js"></script>
   <script src="js/app.js"></script>
   <script src="js/controllers.js"></script>
 </head>
