Added chat_message model and ability to save message.

--- a/chat-client/www/index.html
+++ b/chat-client/www/index.html
@@ -18,6 +18,9 @@
   <script src="lib/lodash/lodash.min.js"></script>
   <!-- socket.io lib-->
   <script src="lib/socket/socket.io-1.3.5.js"></script>
+  <!-- moment lib -->
+  <script src="lib/moment/moment.js"></script>
+  <script src="lib/angular-moment/angular-moment.min.js"></script>
 
   <!-- cordova script (this will be a 404 during development) -->
   <script src="cordova.js"></script>
