Added ability to load chat message history.

--- a/chat-client/www/index.html
+++ b/chat-client/www/index.html
@@ -28,6 +28,9 @@
   <!-- your app's js -->
   <script src="js/services/app.js"></script>
   <script src="js/services/config-provider/config-provider.js"></script>
+  <script src="js/services/api-endpoints-provider/api-endpoints-provider.js"></script>
+  <script src="js/services/base-service/base-service.js"></script>
+  <script src="js/services/chat-message-service/chat-message-service.js"></script>
   <script src="js/services/user-service/user-service.js"></script>
   <script src="js/controllers/app.js"></script>
   <script src="js/controllers/chats-controller/chats-controller.js"></script>
